--- a/content/views/index.html
+++ b/content/views/index.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>React Todo</title>
-</head>
-<body>
+{{ define "body" }}
+
     <div id="app">
     </div>
     <script src="/content/bundle.js"></script>
-</body>
-</html>
+
+{{ end }}
