--- a/content/views/login.html
+++ b/content/views/login.html
@@ -1,5 +1,6 @@
 {{ define "body" }}
 
+    <h2>Log in</h2>
     <form action="/login" method="POST">
         <label for="email">Email:</label>
         <input type="text" name="email" />
@@ -8,6 +9,7 @@
         <input type="submit" value="Log in" />
     </form>
 
+    <h2>Sign up</h2>
     <form action="/account/create" method="POST">
         <label for="email">Email:</label>
         <input type="text" name="email" />
