Removed 'content' folder and fixed 'CreateUser' logic

--- a/views/index.html
+++ b/views/index.html
@@ -2,6 +2,6 @@
 
     <div id="app">
     </div>
-    <script src="/content/bundle.js"></script>
+    <script src="/app/bundle.js"></script>
 
 {{ end }}
